chore: create service for auth

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
 
       <span class="example-spacer"></span>
       <span>
-        <a [routerLink]="['/login']">Entrar</a>
+        <a [href]="redirectURL">Entrar</a>
       </span>
     </mat-toolbar-row>
   </mat-toolbar>
