--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,7 +1,8 @@
-<mat-card class="example-card">
+<mat-card class="card">
   <mat-card-header>
-    <mat-card-title>{{ music }}</mat-card-title>
-    <mat-card-subtitle>{{ artists }}</mat-card-subtitle>
+    <mat-card-title>#{{ musicInfo.id }} - {{ musicInfo.music }}</mat-card-title>
+    <mat-card-subtitle>{{ musicInfo.artist }}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image [src]="srcImg" alt="Photo of a Shiba Inu">
+  <img mat-card-image [src]="musicInfo.srcImg" alt="Música mais tocada">
 </mat-card>
+
