--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <p>
-  <mat-toolbar color="">
+  <mat-toolbar color="primary">
     <mat-toolbar-row>
       <span class="logo">
         <a [routerLink]="['/']">Stats Spotify</a>
