--- a/src/app/musics/musics.component.css
+++ b/src/app/musics/musics.component.css
@@ -5,3 +5,16 @@
   justify-content: center;
   flex-wrap: wrap;
 }
+
+.musics-container {
+  text-align: center;
+  margin: 50px 0;
+}
+
+.musics-container h2 {
+  font-size: 30px;
+}
+
+.toggle-buttons {
+  box-shadow: 0px 10px 13px -7px #00000050, 0px 0px 15px -5px rgba(0,0,0,0) !important;
+}
