--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,8 +1,10 @@
-<mat-card class="card">
-  <mat-card-header>
-    <mat-card-title>#{{ musicInfo.id }} - {{ musicInfo.music }}</mat-card-title>
-    <mat-card-subtitle>{{ musicInfo.artist }}</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image [src]="musicInfo.srcImg" alt="Música mais tocada">
-</mat-card>
+<div class="card">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>#{{ musicInfo.id }} - {{ musicInfo.music }}</mat-card-title>
+      <mat-card-subtitle>{{ musicInfo.artist }}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="musicInfo.srcImg" alt="Música mais tocada">
+  </mat-card>
+</div>
 
