feat: finish open dialog for login

--- a/src/app/dialog/shows.dialog.html
+++ b/src/app/dialog/shows.dialog.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Parece que você não está logado...</h2>
 <mat-dialog-content>
   <p>Logue com sua conta do Spotify para acessar as funcionalidades</p>
-  <button mat-raised-button color="warn">Entrar</button>
+  <a mat-raised-button color="warn" href="{{ redirectURL }}">Entrar</a>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Fechar</button>
