--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,1 +1,1 @@
-<button mat-button (click)="openDialog()">Launch dialog</button>
+<!-- <button mat-button (click)="openDialog()">Launch dialog</button> -->
