--- a/src/app/musics/musics.component.html
+++ b/src/app/musics/musics.component.html
@@ -1,5 +1,8 @@
 <div class="musics-container">
   <h2>As suas músicas mais escutadas por período!</h2>
+  <p>
+    Explore suas músicas favoritas em nossa aplicação usando a API do Spotify! Descubra suas faixas mais ouvidas por período e mergulhe em uma jornada musical personalizada. Reviva momentos especiais e redescubra suas músicas favoritas a qualquer hora, em qualquer lugar. Conecte-se com sua trilha sonora única hoje mesmo!
+  </p>
 
   <section>
     <mat-button-toggle-group (ngModelChange)="changeTimeRange($event)" [(ngModel)]="timeRange" aria-label="Font Style" class="toggle-buttons">
