feat: finish home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,27 @@
-<h1>Bem vindo ao Stats Spotify!</h1>
+<section>
+  <div class="banner-home">
+    <h1>Stats Spotify</h1>
+    <h2>Estatísticas personalizadas sobre sua conta</h2>
+    <button mat-raised-button>Entrar</button>
+  </div>
+
+  <article class="container-card-home">
+    <app-card-home
+      title="Top Artistas"
+      paragraph1="Explore os artistas mais ouvidos em diferentes períodos de tempo, seja nos últimos 30 dias, nos últimos 6 meses ou desde o início de sua jornada musical."
+      paragraph2="Nosso site oferece uma maneira fácil e intuitiva de visualizar os artistas mais relevantes para você, adaptando-se às suas preferências musicais ao longo do tempo."
+    ></app-card-home>
+
+    <app-card-home
+      title="Criar Playlist Personalizada"
+      paragraph1="Crie playlists personalizadas com suas músicas mais escutadas em períodos específicos, como um mês, seis meses ou ao longo de toda a sua jornada musical."
+      paragraph2="Aqui, você tem o poder de criar playlists únicas, refletindo seus gostos musicais em diferentes momentos da vida, garantindo uma trilha sonora personalizada para cada ocasião."
+    ></app-card-home>
+
+    <app-card-home
+      title="Top Músicas"
+      paragraph1="Explore suas músicas mais ouvidas em diferentes períodos de tempo, seja nos últimos 30 dias, nos últimos 6 meses ou desde o início de sua jornada musical."
+      paragraph2="Aqui, você pode facilmente visualizar e acompanhar a evolução de suas preferências musicais ao longo do tempo, garantindo uma experiência personalizada e acessível para todos os usuários."
+    ></app-card-home>
+  </article>
+</section>
