--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <img class="logo" src="assets/logo.svg" alt="Logo do Stats Spotify">
+    <img [routerLink]="['/']" class="logo" src="assets/logo.svg" alt="Logo do Stats Spotify">
 
     <button
       [routerLink]="['/musics']"
