--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,10 +2,6 @@
   flex: 1 1 auto;
 }
 
-mat-toolbar {
-  box-shadow: 0px 8px 9px 0px rgba(0,0,0,0.3);
-}
-
 mat-toolbar button, mat-toolbar a {
   font-size: 16px;
 }
@@ -26,6 +22,10 @@ mat-toolbar button, mat-toolbar a {
 .logo {
   max-height: 60%;
   max-width: 100%;
+}
+
+.logo:hover {
+  cursor: pointer;
 }
 
 .button-exit {
