--- a/src/app/shared/card-artist/card-artist.component.css
+++ b/src/app/shared/card-artist/card-artist.component.css
@@ -6,7 +6,7 @@
 
 mat-card {
   width: 220px;
-  height: 320px;
+  height: 220px;
 }
 
 .card mat-card-title {
@@ -25,10 +25,8 @@ mat-card {
 }
 
 .card img {
-  max-width: 100%;
-  height: 245px;
-  /* width: 220px; */
-  /* max-height: 100%; */
+  max-width: 220px;
+  height: 220px !important;
   object-fit: cover;
   box-shadow: 0px 0px 15px -5px #00000070;
 }
