--- a/src/app/shared/card/card.component.css
+++ b/src/app/shared/card/card.component.css
@@ -25,8 +25,9 @@ mat-card {
 }
 
 .card img {
-  max-width: 100%;
-  object-fit: fill;
+  max-width: 220px;
+  height: 220px !important;
+  object-fit: cover;
   box-shadow: 0px 0px 15px -5px #00000070;
 }
 
