feat: create link for button in home to login

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="banner-home">
     <h1>Stats Spotify</h1>
     <h2>Estatísticas personalizadas sobre sua conta</h2>
-    <button mat-raised-button>Entrar</button>
+    <a mat-raised-button [href]="redirectURL">Entrar</a>
   </div>
 
   <article class="container-card-home">
