--- a/src/app/playlists/playlists.component.html
+++ b/src/app/playlists/playlists.component.html
@@ -1,1 +1,32 @@
-<p>playlists works!</p>
+<div class="musics-container">
+  <div>
+    <h2>Crie uma playlist com todas as suas músicas mais ouvidas! Selecione o período abaixo e cliquei em gerar</h2>
+    <p>
+      A playlist terá 10, 50 ou 100 músicas e você pode escolher as mais tocadas do último mês, dos 6 meses ou desde o início.
+    </p>
+  </div>
+
+  <section>
+    <mat-chip-listbox (ngModelChange)="changeMusicQuantity($event)" [(ngModel)]="musicsQuantity" aria-label="Quantidade de músicas">
+      <mat-chip-option value="10">10 músicas</mat-chip-option>
+      <mat-chip-option value="50" selected>50 músicas</mat-chip-option>
+      <mat-chip-option value="100">100 músicas</mat-chip-option>
+    </mat-chip-listbox>
+
+    <mat-button-toggle-group (ngModelChange)="changeTimeRange($event)" [(ngModel)]="timeRange" aria-label="Font Style" class="toggle-buttons">
+      <mat-button-toggle value="short">Um mês</mat-button-toggle>
+      <mat-button-toggle value="medium">Seis meses</mat-button-toggle>
+      <mat-button-toggle value="long">Desde o início</mat-button-toggle>
+    </mat-button-toggle-group>
+
+    <button (click)="generatePlaylist()" mat-fab extended color="warn">
+      <mat-icon>playlist_add</mat-icon>
+      Criar playlist!
+    </button>
+  </section>
+
+  <section class="iframe-playlist" *ngIf="iframeSrc.length > 0">
+    <iframe style="border-radius:12px" [src]="iframeSrc" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  </section>
+</div>
+
