feat: finish creat playlist

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="banner-home">
     <h1>Stats Spotify</h1>
-    <h2>Estatísticas personalizadas sobre sua conta</h2>
+    <h2>Estatísticas e criação de playlists personalizadas para sua conta</h2>
     <a mat-raised-button [href]="redirectURL">Entrar</a>
   </div>
 
