--- a/src/app/playlists/playlists.component.css
+++ b/src/app/playlists/playlists.component.css
@@ -43,3 +43,7 @@
 .toggle-buttons {
   box-shadow: 0px 10px 13px -7px #00000050, 0px 0px 15px -5px rgba(0,0,0,0) !important;
 }
+
+mat-spinner {
+  margin: 25px 0;
+}
