--- a/src/app/playlists/playlists.component.html
+++ b/src/app/playlists/playlists.component.html
@@ -23,10 +23,12 @@
       <mat-icon>playlist_add</mat-icon>
       Criar playlist!
     </button>
+
+    <mat-spinner *ngIf="loading"></mat-spinner>
   </section>
 
   <section class="iframe-playlist" *ngIf="iframeSrc.length > 0">
-    <iframe style="border-radius:12px" [src]="iframeSrc" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" [src]="iframeSrc | safe" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </section>
 </div>
 
