feat: create side navbar for mobile

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -32,4 +32,8 @@ mat-toolbar button, mat-toolbar a {
   width: 100%;
 }
 
-
+@media screen and (max-width: 750px) {
+  .navbar-desktop {
+    display: none;
+  }
+}
