--- a/src/app/musics/musics.component.css
+++ b/src/app/musics/musics.component.css
@@ -25,3 +25,10 @@
 .toggle-buttons {
   box-shadow: 0px 10px 13px -7px #00000050, 0px 0px 15px -5px rgba(0,0,0,0) !important;
 }
+
+@media screen and (max-width: 850px) {
+  .container-items {
+    width: 100%;
+  }
+
+}
