--- a/src/app/shared/card-artist/card-artist.component.css
+++ b/src/app/shared/card-artist/card-artist.component.css
@@ -35,3 +35,38 @@ mat-card {
   padding: 10px;
   color: white;
 }
+
+@media screen and (max-width: 850px) {
+  mat-card {
+    width: 170px;
+    height: 170px;
+  }
+
+  .card mat-card-title {
+    font-size: 13px;
+    width: 150px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  mat-card {
+    width: 170px;
+    height: 170px;
+  }
+
+  .card mat-card-title {
+    width: 160px;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  mat-card {
+    width: 150px;
+    height: 150px;
+  }
+
+  .card mat-card-title {
+    width: 140px;
+  }
+}
+
