feat: create route to personalized playlists

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,11 +17,18 @@
     >Artistas</button>
 
     <button
-      [routerLink]="['/playlists']"
+      [routerLink]="['/playlists/top-musics']"
       routerLinkActive="router-active"
       class="spacer-nav"
       mat-button
-    >Playlists</button>
+    >Playlists Top Músicas</button>
+
+    <button
+      [routerLink]="['/playlists/personalized']"
+      routerLinkActive="router-active"
+      class="spacer-nav"
+      mat-button
+    >Playlists Personalizadas</button>
 
     <span class="example-spacer"></span>
 
